force-app/main/default/objects/Report__c/Report__c.object-meta.xml
<CustomObject>
    <description>Holds information for the Report returned by the DescribeReportInfo API callout</description>
    <label>Report Statistics</label>
    <nameField>
        <displayFormat>rp-{000000}</displayFormat>
        <label>Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>