force-app/main/default/objects/Report__c/fields/aggregateCount__c.field-meta.xml
<CustomField>
    <fullName>aggregateCount__c</fullName>
    <label>Aggregate Columns</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>