force-app/main/default/objects/Report__c/fields/developerName__c.field-meta.xml
<CustomField>
    <fullName>developerName__c</fullName>
    <externalId>true</externalId>
    <label>Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>