force-app/main/default/objects/Report__c/fields/groupingCount__c.field-meta.xml
<CustomField>
    <fullName>groupingCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Grouping Columns</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>