force-app/main/default/objects/Report__c/fields/lastDescribed__c.field-meta.xml
<CustomField>
    <fullName>lastDescribed__c</fullName>
    <label>Last Described</label>
    <type>DateTime</type>
</CustomField>