force-app/main/default/objects/Report__c/fields/LastModified__c.field-meta.xml
<CustomField>
    <fullName>LastModified__c</fullName>
    <description>Updated from Report object and maintained by BatchDescribeReports for ease of reporting</description>
    <label>Last Modified</label>
    <type>DateTime</type>
</CustomField>