force-app/main/default/objects/Report__c/fields/LastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Updated from Report object and maintained by BatchDescribeReports for ease of reporting</inlineHelpText>
    <label>Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reports</relationshipName>
    <type>Lookup</type>
</CustomField>