force-app/main/default/objects/Report__c/fields/LastRun__c.field-meta.xml
<CustomField>
    <fullName>LastRun__c</fullName>
    <description>Updated from Report object and maintained by BatchDescribeReports for ease of reporting</description>
    <label>Last Run</label>
    <type>DateTime</type>
</CustomField>