force-app/main/default/objects/Report__c/fields/LastViewed__c.field-meta.xml
<CustomField>
    <fullName>LastViewed__c</fullName>
    <label>Last Viewed</label>
    <type>DateTime</type>
</CustomField>