force-app/main/default/objects/Report__c/fields/Report__c.field-meta.xml
<CustomField>
    <fullName>Report__c</fullName>
    <formula>hyperlink( reportId__c ,  reportName__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report</label>
    <type>Text</type>
</CustomField>