force-app/main/default/objects/Report__c/fields/reportFormat__c.field-meta.xml
<CustomField>
    <fullName>reportFormat__c</fullName>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TABULAR</fullName>
            </value>
            <value>
                <fullName>JOINED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>