force-app/main/default/objects/Report__c/fields/reportId__c.field-meta.xml
<CustomField>
    <fullName>reportId__c</fullName>
    <label>Report Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>