force-app/main/default/objects/Report__c/fields/reportName__c.field-meta.xml
<CustomField>
    <fullName>reportName__c</fullName>
    <externalId>true</externalId>
    <label>Report Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>