force-app/main/default/objects/Report__c/fields/reportTypeId__c.field-meta.xml
<CustomField>
    <fullName>reportTypeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Report Type</label>
    <referenceTo>Report_Type__c</referenceTo>
    <relationshipLabel>Reports</relationshipLabel>
    <relationshipName>Reports</relationshipName>
    <type>Lookup</type>
</CustomField>