force-app/main/default/objects/Report__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>IF(Age__c &gt; 360, IMAGE(&quot;https://tinyurl.com/d6edksy&quot;, &quot;Red&quot; , 14, 34),IF(Age__c &gt; 180, IMAGE(&quot;https://tinyurl.com/c897w6l&quot;, &quot;Yellow&quot; , 14, 34), IMAGE(&quot;https://tinyurl.com/c2afuce&quot;, &quot;Green&quot; , 14, 34)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>