force-app/main/default/objects/Report__c/listViews/All_Reports.listView-meta.xml
<ListView>
    <fullName>All_Reports</fullName>
    <columns>Report__c</columns>
    <columns>reportFormat__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LastModified__c</columns>
    <columns>LastRun__c</columns>
    <columns>LastViewed__c</columns>
    <columns>Age__c</columns>
    <columns>State__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Reports</label>
</ListView>